asp.net core 套用 systemtextserialize option
